--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -19,10 +19,10 @@ spec:
           serversTransport: proxmox
       middlewares:
         - name: traefik-middleware-basic-auth
-  # tls:
-  #   secretName: cluster-secrets
   tls:
-    secretName: wildcard-tls
+    secretName: cluster-secrets
+  # tls:
+  #   secretName: wildcard-tls
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
