--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -20,7 +20,8 @@ spec:
       middlewares:
         - name: traefik-middleware-basic-auth
   tls:
-    secretName: cluster-secrets
+    #secretName: cluster-secrets
+    secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
   # tls:
   #   secretName: wildcard-tls
 
