--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -15,7 +15,7 @@ spec:
       services:
         - name: proxmox
           port: 8006
-          namespace: networking
+          namespace: default
           serversTransport: proxmox
       middlewares:
         - name: traefik-middleware-chains-basic-auth
