--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/ks.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/ks.yaml
@@ -12,7 +12,6 @@ spec:
     kind: GitRepository
     name: home-kubernetes
   interval: 30m
-  prune: false
-  wait: true
+  prune: true
   # dependsOn:
   #   - name: networking-traefik
