--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -24,9 +24,9 @@ spec:
   tls:
     #secretName: cluster-secrets
     #secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
-    secretName: "${SECRET_DOMAIN/./-}-tls"
-  # tls:
-  #   secretName: wildcard-tls
+    #secretName: "${SECRET_DOMAIN/./-}-tls"
+    #secretName: wildcard-tls
+    secretName: "whoami-${SECRET_DOMAIN/./-}-tls"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
