--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -26,7 +26,7 @@ spec:
     #secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
     #secretName: "${SECRET_DOMAIN/./-}-tls"
     #secretName: wildcard-tls
-    secretName: "whoami-${SECRET_DOMAIN/./-}-tls"
+    secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
