--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/ingress-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: proxmox
+  name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
   namespace: networking
   labels:
     app.kubernetes.io/name: proxmox
@@ -14,10 +14,10 @@ spec:
     - kind: Rule
       match: Host(`proxmox.${SECRET_DOMAIN}`)
       services:
-        - name: proxmox
+        - name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
           port: 8006
           #namespace: networking
-          serversTransport: proxmox
+          serversTransport: cluster-apps-networking-traefik-add-ons-external-services-proxmox
       middlewares:
         - name: traefik-middleware-chains-basic-auth
           namespace: networking
@@ -34,8 +34,8 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: ServersTransport
 metadata:
-  name: proxmox
+  name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
   labels:
-    app.kubernetes.io/name: proxmox
+    app.kubernetes.io/name: cluster-apps-networking-traefik-add-ons-external-services-proxmox
 spec:
   insecureSkipVerify: true
