--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/endpoints.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/endpoints.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: traefik-add-ons-external-services-proxmox
+  name: proxmox
 subsets:
   - addresses:
       - ip: 192.168.1.7 #${PROXMOX_ADDR}
