--- a/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/service.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/proxmox/app/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik-add-ons-external-services-proxmox
+  name: proxmox
 spec:
   ports:
     - name: https
