--- a/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/kustomization.yaml
@@ -3,4 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
-  - ./proxmox/ks.yaml
+  #- ./proxmox/ks.yaml
+  - proxmox.yaml
