--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:T3DPWbKm,iv:vtSaOgVyVSPO64Es3rzwjLIpNwhnbNDHZbsyxtBWKaA=,tag:nDgJzPG0Ia9/aMMtnPdY/g==,type:str]
-ansible_user: ENC[AES256_GCM,data:9pPBYAMm,iv:Jf5Z83yBJmqVukArjl2MH5GsmzwJs0nPHOMaPFVWs2A=,tag:EvDJEGde4v/sEr19cBEsUw==,type:str]
+kind: ENC[AES256_GCM,data:tEfGj58S,iv:K/MHzQ3/8YLr3OvQTy5RKgE2jqgR8MKDD0+gvtepc20=,tag:oV04n33QPuVwHp5+jh57Hw==,type:str]
+ansible_user: ENC[AES256_GCM,data:WmMb5rqo,iv:iM3AQ0hYYZmHOODWB8lzWDia5EWCpim5cuPV9VjbbkI=,tag:nSlJHDWm2qCosyGBRsOpGA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXVng2ZmtFK0JLeFdCekFE
-            aWYrR2FIa0lkYWt4TVpOTTZiZUtENDErTVRRClpvODZsWjJhZWQwclQ4RjkzV1NU
-            eWVZME1OVzQ4Rjd5TEo1VkZpVk5ZYU0KLS0tIGJQeGJBdVBYazlVQzk2Y21kNWJR
-            Tk5DVXJlMkxMTHI1Skxpak0rMm1ma3cKfWcIRBDqBmnNzER00FgqjFmel8t8Lr8f
-            RL7MGicZwndlaOm6zgEFeMSAtjHhKJUkPLhV7ZfRDHGL1z1HTBAU3g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtbGdQdTJnWVZud21DcVZv
+            ZjJnTnh1ejRZZ3VTMmp3QmRDQktmR2dmSmtZCnVleUFGV3RNcGVFbWRpOUtSOHNZ
+            dGdlUFp3L25qb29kK0lVSm5YWlZrYTQKLS0tIC9UT0VieHZxQXc5ekxwNHlBd045
+            c1ZLY3dyT0NET0IxNy8zOUFtQ0pDREkKFObisDPEIG4BlR+nRskw/z00W6Q7Xm27
+            D4TMBknM/2U5fqV+OuTcc+BNhX9bhyblfdNgofUyWE/5hr4w+AwnAw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:gbeUuYzWsiZA/tnNDt7T9Lasfo1zV/t49198jlE9yR0ETifyggI1qlibYzu7vObQKjqXn24spLKJbm85vwAW3VsGjwnxBtO5qCfBnNLP4OmH1OKMoGmAa2965T9MnmDXWVnJrlcCuFLk8yh7OZfYnX4evJegdBP3WUWFWozHEEY=,iv:LKpEGXH8m5qGXtbovwx7mx+c0UUPFXuyeKAkaO7swW8=,tag:MeBsif8udQeX2MJwjWGczQ==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:cLBRuwuVUi1Z0toivf5N/Qt1kIwvf/HbZRFGsL0Nt0nBOZH+F701VvrM8+Hirb5EXqskyZJYpiE4snLZ1T/ZaqR1BIH1PQEBF4vzCbenbvTm6b8w6y9H7Ap2NQqE0+twezo6telHX7n4Q37i4AfukHDW41pF+a0Cwo5wG9PgSaA=,iv:WrYKh/GCd9HxptjNlGJGx3irXO+iBGyk1q8tIg1/+xg=,tag:U7uN2xNvC4Nz2c61Chzwgw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
