--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:AuyXfjf1,iv:9xmLRAYxDBeC0OdwvnKdLJpFWdm3YQGw9syvmSDaqzY=,tag:SOQ1bAZehI0SjS1ZdAjnCQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:ETVGqRL/,iv:KJaWdwWnkUdIs40LfQJuqQ0/hsNVYDYUm3+uebrZK7Y=,tag:zWLaGwAgRGSHoLanGot7AQ==,type:str]
+kind: ENC[AES256_GCM,data:XtkBLwCx,iv:uTSWAyW4J/K4bsRQbqrJ5yaaa/LNL+lZvIHfLG2WHGc=,tag:x5D9rZFuld6w+3rom0duhw==,type:str]
+ansible_user: ENC[AES256_GCM,data:D5nWgCFQ,iv:HO+OV9xR61rkmKYZzxhg00Qmkz5bQ4fWGwHMRI288V8=,tag:1FKo+/1AUhYfgl9IUB/AGQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjbzEvbDYwVklWWUd2ekFT
-            VDk1YngwaUcraEtFbUl2TGxFWjRFMnNGWFFrClhDVlRvN0lXNzY3VmhvVk8rY002
-            Q0ROTGY2MlUxYVN6dUhxZnRhWGtFVTgKLS0tIFNsM0lzc1F0a281R0N1Mjh5VXl4
-            Sk1VdGM4blB5TXVNeHp2Q2QvOXBMdVEKc1fNnnxA4FQJ5Y7sRFdduMkZWMwmTwVa
-            Zbc2NePln843qri6d0E/WzToXQG3aQECBi5C/o+taW9WjesW6bbf2w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWTEcwSWZobm9QZllYcUZL
+            Y0U0WmQ1VlMxaU83TGpNbkNMTDlhbHRKTlJFCjY3c1ZORm11eGI4QndCZW5sbGZU
+            Ynlyd3YrRmc4dFM0RVBsNWg2ZzhQbXcKLS0tIG1WS2NmWU9oZFQ2WDdHaXlnR2li
+            UjJmZVY2MzZJOXMvdkMrYzBjei9VcVkKhJDfFCeeO+5I98kL/trMQXuLx6/hrbvq
+            gb6Ft0ujAbDz3RR1HgB7ZE0t20USRNvtv7Lqql1cyCzJ41nXILhyiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:QAIv5zrpdGV8GPK8KTk68CfB8t3UMcArFJz04+sN8eChdyC1fiaGOQTm2HVAdZdJLh5jkG35RXlheDYH76nubfL7uNYiEI7dIE1y/+zxS6vRrbyv1cmEQE6c6IsjULK36JSRPgWwKHxZcAdH5pxFc2mBF3XL3+vMUX16FWaQL44=,iv:ZZ7ZqomOiWzBoVNu6gmXLp9x9k5d/wfA2JKe31BAeTs=,tag:fELVhg7ikU0yTDu8Heti8g==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:8FqSei9mqjOBUgyKNT9mM1rtyh7yfVUCJP/wC066Ajb0aG9C69BCzaJe/D7WaIg+OJuSOkQYACS5vEWdVNnhN3Onc2aQlaj00y+l+Xwa9rmLHtacC/iPCFV1FwXqAskoC9P+r1gOqDfD+YuXu9kcvj3JX/B3xk52RyyTXk6AW/o=,iv:qT8vKu7HtRsyx76rlBxcbX6WwQLpyciCH62nNPrGnyA=,tag:yZ80dpRuGx2P2PKo41h4ug==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
