--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ZtJ0jk9l,iv:+oEjB/8CE9jDnHr/WInrYKdBnTG65Y4xmScEUSkA9Pg=,tag:Aqk6aziNREVVpA26RjUY8A==,type:str]
-ansible_user: ENC[AES256_GCM,data:9eSiHSXG,iv:hlKeqf1FcES3Mfws4zcfoKDOGL2OWYAxbNjC5eUDOc8=,tag:tJ0CsVG+qPf3jaSkV3Lpjw==,type:str]
+kind: ENC[AES256_GCM,data:vzPmHCJT,iv:euYewXWsWxyvAGdhnj5c1khS3cvQwtm/xiFz5FcO+Fs=,tag:WTI2wXKt79RLZQnYvXLr2Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:ykS2urJG,iv:Tz0czKCgg+deHLLc39LvOCvUyK6EL8EmeKztqkrONYs=,tag:PJzW/oeBIg4WOGj/A2Fk+w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByeVVyS2o2bHVKYUd2blZQ
-            ZU5MVHhDeWZ4SFZpUVk0L0NCMVdMMWYxdkFZCnFBU2l4eDFKb3lzY2NWajM1ZS9I
-            d2ZJd0tEQW1PemI4dXMwRERRTjFRN1EKLS0tIE5VUGgraHZ2LzRhMEY5MHNmRTRN
-            d3pGdCs5cUNpRnFWS0Q2eGZtMXB2S28KDTd1mBJ4fsHngCckFpQn5jZ3QrgUYVE4
-            6NF4uPlDeX+hPiP6dwSEH+laMLuQf2rQgqJpvL8QInrVydZ74fVrRg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNZXJLbElXZ0lIUHVRd0tD
+            bVIrT0JDSHpDb3B1WWIyTzhBZ05oSTZsRVRjCkRYdTkvbTZNNHFlTXlTMHlRNk4r
+            djdGNXU0dEVoUGdSNHYrUTNHTDhOYzAKLS0tIDNKeXpzeEZLOEpUUTY0UWRUNS8z
+            T0pHREFtMlFaR20xTGgyZkh5bHRKSFUKTZyCEUYIa1rLZf3vMlCQj1b1caVyn+SK
+            jzKnaJf6FYpSTYx3fW2jQnKSIlyYzp0D1L1zoMGPKN649Hc86FYHqg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:1Jz/JA4YNAMVtIxlLWYlAXP6wJfjMqnl798VbG+NQ3lO8yTJ+aVTTFT/ZLT2A/6r9up4NafilKnsELF2hjh4UBieE8vD+hjL0xb3w21jTAwQI0U+4mq0OhSrJpPp26znWMoRvNJGkNsGelH57+MQ5V9ZBq7MteJ1b4/e7OmL4jA=,iv:inw6gEkS4sKyHgpNW917s5j8glNHc194Kx0mSj9lOXk=,tag:O1szRC3CedYf1u7ES1Koog==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:svTndLKMnuBqK2N3oVEhUmG3F0Kq2XAC1IxZCCS9YPmJ/nE4YQ9RotoxLWAmQzmnN2REnhZ8XVN0tSW8X0maRG61JyonGAHsoSEy9rxJ+iv3j4KUhZYmk8UQRMUfanKkyZkPTlYUfZYXfDLfGMz3yTlW42xjsqdAySox/lDnGNU=,iv:OGVrC0c1DJR+YV7pszQ9vqldVvEQ+ymSCg0K7uTk3mk=,tag:/rvoOJ6m4AtS5YXWz95fbQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
