--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Uv0ocgPt,iv:L8CEiI6h8yIuvDLxrb7Boellryz0Qom98rBFFPyx+bk=,tag:+a7LBGLjR/ijIORKJ6dv7A==,type:str]
-ansible_user: ENC[AES256_GCM,data:vL18wUdV,iv:Cux/MQthb9V3Ng5gyhPKfTPLHcAxpp9OM1IxcA9Vcbs=,tag:1LQMO8TMLjWJSrTgt22fXQ==,type:str]
+kind: ENC[AES256_GCM,data:uKamjAU9,iv:k+q6theYAtwyHDaEwKblRemAnkT3Ifbw+C8Kpf3u2zQ=,tag:PUJTO+1+/MJmNe4xOX3Ygg==,type:str]
+ansible_user: ENC[AES256_GCM,data:AMwYm9MN,iv:D3C5O90au07NToSdVNkUWJMLs2GvVdD63TCA64hDFsU=,tag:DgEJ9suvTHiYpfZiqa5hIQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Z1paQ1JOQ2IwZVlLWlpV
-            Qlh1dkJqSGFKYWdzK0ZxSHZzcEhUL1Q2b3dvCm1YMWNBWlhyWUdsbnFYQ3crRGc3
-            RWVHZjJhL0VobVZFTGVXek85blNVYW8KLS0tIFcxejgyM1Y5RHloV0ZJTENDd3E4
-            NFlWVlFibEtVazhnV1ZGVU5RQmF4WjgKJhbrvBpW0fTipjRz9r2WiE0mjzmitOod
-            VKlW7cdHxJKQJDjxfwb8+bv1OsEyYrNbeKM7R+XFaogWcV3HWFGugA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUTDJBS2xETkJnakpvcUwy
+            WmNrd3hKcnJiampKd3Y1dTRENEhrRW5jTG5rCnhmQklJWnRBK2J2cUQ3VGljSXJr
+            MUpEMHkrWEYzbXFabDVkU29vQzVIc00KLS0tIFNtMTk0aWJpYVZPYVBHYUNuZmwz
+            OW1mVGg3UzJCYVhoWHQvUitTcHNIcEUKx/woefxWBiYZ1ryR786sxLQek0dsreIT
+            MlQD2s8pz8eJRjcSzaREhbAollc6NiCzyAUXGyzueu0EMu9inpI7FQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:vcJw5RU/xn4cUURuVBSbEdMZRuejVS05WfDrpQJCM6nUJWn6ZN5Xu/LfQ6nFFZznYEJg9IpsjBvZ2cXslxgyzM7RdoMkSRR5aDjc8qiTqZ9KULJNfAGQrrpRGtKibDM02SgchCSJT7h8gVjxulq3P/JQnHzsrXp/MxL2B9ZwNdQ=,iv:ZaGq9OzMLzh2KgNdfjoZJiTujk9VtjUf/1yf/mu3jA8=,tag:yh+BA4dVz3rWT8A1K+wUKg==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:GPfcunrAa9NWTItYtFFjUDKJ3aEv2fFdP/1mzjQzE4qsCxv0CCEOXaI9TmeuQ/s91eQlsDNFEdVDeQMEdKSG1u/XGjnQ1BA0NufkcDZQOooXizHODpzEjcERxVB18CS0ZlHz2RHWRvjoNkRd4cSj+RdUgxRNi6sPBP1nVppqWqY=,iv:BkrI+j4VQ0hsRQU3l/SZZB+/dwz+W0iEir59AWoqqG0=,tag:XCJ/jzIxmwMlXZmPbsvq9Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
