--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:sWBNSriT,iv:qpmAQV//xNQlb1MRn5zPMHgnFVRc+xc9jhJompB8CNA=,tag:X3XnQqejA1PtGRFoBp0UTQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:kp+OgbK6,iv:itRQhq2zrb5VYecPN4BPj+reZJJ1UgCbuHS7FocwLmE=,tag:ryVyqjh9L8ZK8Tknmo9RSA==,type:str]
+kind: ENC[AES256_GCM,data:LFdgW7Zs,iv:Pjacwk8l4pAdFFwZ7jdc8K76d/kTffYx8/Fv+qbTGMg=,tag:v9GzH3DlyOxL9AFK65uHpQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:XpbAXrxt,iv:gm9tx15JOCbJc5f//2ncpgeCxU5UprxqdZvVkLvmk+w=,tag:uao5oboH+tXN06yM+8jAWQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBRm05VnozY0ZLQnV2RlhF
-            KzVpMTh4dzZ4Ti80Rkd0clNuZTg5MHh5T0dnClVmQUVNcWNMMk9uajZCaWdtbmU4
-            NlNldno1eDJWbWt2cnJKTitndDFrWVUKLS0tIERqWDhkT0VmR2JLRkg3ZW5SZlps
-            S3I0Vi90djF4NWZVNy9Nc1UrSTArekUKCJQ+x+Vv+bwV+8LqHFz9UUvWWhtkqK5f
-            dANqpbTuKaaY6s3Fcw4i4Ccv/3lzCL3I8gELfzHEgmKe7el/xyAaVg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZaGxPcmltMCs5ZC95RGcx
+            b3Znb0ZPZ2orSzBlMEcrdWhsbVJDZFp5MEVNCnNURisvV0g3eTUzcThvNTdrQ2M4
+            MHFCUmNyWHk4ZWpGL0J5SHVVNlNocDAKLS0tIGdOZDVzdmtWU3VBVW9CbGNPT2JQ
+            L1RGb3VhU1R6dTRvZEtRdUlVMHN0eFUK2zYO/wmI6JbTuh/LoAiI2y0iyZKdZwbV
+            wSBnWjEqRpVy+FzGTgfE/wnEZWaLBNV8/w5RbOTuWvNfo8F32y9o/A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:62yVjAsLNNNLlKL23pSzd3KQelSj1hLM3FlN/Di/m+lbhyUo58SlCOGsSTF92TOidRBkoYABZ9imVcoLP9deSXewaD4n5gkpM+rUp0MFeI2s/TrWMvpY2EAUxgbCN5kLCZgyxzEwnQi+0TKK4Nb/FCghjvywfFceE90iNgAeGtM=,iv:hUUKgF3UjiVAnK4sjQ7qpserZwSenC2mxJlxpLYUpuM=,tag:Kd2rw/Hs6LdO5CbSt/WjYA==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:NuT2k7ti6YmYDpfSXrhg7lQhaUHZmk2d0zRePkuoFCMeph+DiqoC3RViPDaF1eOnPVzWgmhnKN0VBHbIzXAF0oPYQlzzvUvMgsKRgSPlt86lwoDgyMmCNilwSq2bWEab0vPnZqQYELSn1BbbepAysbcWxEqc0PP6KxmimOkxSrU=,iv:hupeP7/Qf5fn3g2yhb9AuuVm/GVtUWgXebERoXMZAfM=,tag:j35O6hts7BDcSxfJaQqmuQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
