--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:02SjMubupu4Pa0XZr+R1oHiaHl4N,iv:kqpgcf7eNQbsHYwvpGQ516N27Wv/iKx7x/HMfhQMmj0=,tag:OOQwRGjBJEMFxL+a9Llf1g==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:soRFfvdrkfzgVsFN1ONYPd1smYhA7qbNTQmL9VANxfpYMDAffw==,iv:bCilqboSp07+wW+NyBWIoKpcSZDx9Ek3Kxutd7o4C8Q=,tag:ZbS6muFlItv3OWAwc/FIcQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:jKcMRR2O56zvNLo=,iv:PL58q5pmlMpkAjwSz8dlKRq+xjoGaHAEZOqYEWjm+RI=,tag:WdzQN0TNfpuUt97R3Q8Zfw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:wYBdwK34XDF8etm40lffwfVPtokL,iv:f5UAf36GSJcVlLa3QiytJWgUBbCGt3VvHTYVGtdUrwQ=,tag:k08zx0Qn7g+bEqy2nx/dyg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:cIws6G+5mUztB3Y2ib2OxS5El8fiMOEjXTHd7bIUsoP2Oevbmg==,iv:zD5xFqVslOZ5yfGqEz92yRMB0jsv2fsLcbAGfF49cos=,tag:mICGrXLj0PXmmWBn1p2xiQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uG0nOPxi8Qjokzc=,iv:/7dsYHhtEbdn8mjpaMDsi1qUYzZZLlMWnxKPn7CAhfY=,tag:I2Yn5O/GtheEVqZ//942VQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJUWR0dmZ6QUdzbUlkK2c1
-            cktwQWVjTEVCM1U2NHNUbkRCb3AvWjJlM1djCmswOGlJNkxpWExMVVZBT0VVNEtp
-            OW51ajUwczRMVHNWOFdHRTBmZjE2UDQKLS0tIFdpRHMyakU5a3dsTzhzSnpZbWRh
-            YUoxQnRtRmVMeGh0UENCZFZTSk9uTEUK2hZW4YT9qexalrhlIm1ajdsVJTISgRRW
-            6Jrg8CQEgSB9DNE2ilNvRvnSArvh08f3poliykMKhVFaqdQ99KvQ4g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbWxtTnFsam1XTlFuTmhV
+            M0NhTmprYkxsTytGMFRMVG1HbDI3RUhrMXp3CkdDVGYxOER4M1FQeER6TEZpRHhk
+            eWJ3QWdjVlFzM1loZmcwMVpmYWo1ZDQKLS0tIHhCaU80UHhONndFQ1o2TVVPYS83
+            eFFaeWc2dXBxUnFpdEFQUzdnYm45Z0kKiVwKqANk9Ml7AYxRizvYWQBOXBasfAkF
+            pbo4dRAWYsOL9atbg0TkYxur7DIlyfXSOL312dVIA6l5cjEwIOS2iA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:jwAB+md0L0Xl1OJSQRyoRI8umOsD5nGqRWfAxVJHLtUDUmFO4qbse4Kd79dT9UzZyjawrmLz2+htUjOzHYglg1hUavX6H0aAB7JQW//+W55ayyO1jA9RlOW2kdBlanI/xmC3IxPKFM/xofUKYiQVXXQMFaYl4vJR90raaVOkm0U=,iv:xzPw9jhz6P7Pqv6mpAXfXUp8a3xrWdWPI/B9rUBc7No=,tag:fv72XzriwkDwOB7PtSHX7w==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:+vgq8aATOayNrEVEdhNkkt+D9DRsMdSB2HleeuR11IUE3lQ4x1RQVPQPtym3ZzGxpQrLGrGw59ZRBY/AkAnNL7XIdXsYmY0kjyloZQO5xdq7uJCkErfyNKFyntu8UXe5F2A+vF3cePOth9XUZI22JyKQpplgpYUYK0JeoTRyA5A=,iv:qfZ+o34q2bLw1JpFLQvfi95T80NfyGmFXOD8CHWSOKU=,tag:i1RPYR1ISvhcxiUU6IEsnw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
