--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,11 +4,11 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:YOes+AbQxIhwWfk=,iv:z7IaLiUfNUhc6R73AQRvryOxzoV9OubMgs3vlQXElkA=,tag:U5ZEdIMdPDk7WiHX68SV1A==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:XWtttQ8MOdbMqYhHMM4AyrHl1H0N,iv:rBFCrKlpfopFsN8jK6MpXU6WcONr1g6yxNZBVpQ0LyU=,tag:NMO91K84F1ZPfTt1JQe1wg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:jWe9aSScu9MSqJONmVKuzyzLC/U9reK9e9585eSCFE1knYRg2pBFMFUdCp0x1uNWhXS8BHSkK9r2ymNt59VUQYh8KT7YdYY=,iv:gO5LBMRRkLpHbWc0SSLZJLkPoCBAO7Uqq9hmlHBdhq8=,tag:boJ8/zJ+yUiaLMbQf4uuSA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:WwuV8Wmfmk5MYL3mcHZlCq4Y0ceMj5nUpG4wyr+tkcvcwJA=,iv:oI7XoCq5zCTLTzaclKqvj1lQzPt4spS1QjfyLe6uLkM=,tag:/K8GoJZyWww4L31GTnSjnw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:cjtC35qj9N/IrvrA8eFOj/STWA==,iv:89sq1xUYZQp2es9ezGKphXzlWjrPOVd4Y8lEI6NP+V4=,tag:AdXJ1l8GxETV8KusUSuy7w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:4itwbCD8ZxcuO8M=,iv:O4dLHj7eO4IAxVK3tWvfU/9AYiw89pZDjd/voi4GXqo=,tag:fv2sWXdUz/5nl5/tcDiR7w==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:RQtvLYIV9y57pKO0Dgin4GhPmC/u,iv:QCoZ36xYj/tFrxa/rbG9Vcjd7T61hL468gZ1WKzEZi4=,tag:s2c7tnVHceFX0mp444dvag==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:5UHQKL/iFIPzO8OIfMQ271PiHCoDg6xEfzcsiEqvYhdmYYuTaFv9LICLcKAxY37bAYGTT/sFLvVWqsechtsMG19Mc35BvyY=,iv:MQhBYWSZ6/BkG9PBJ1xE95AMg8Nf2Th60hBqeWk5fgQ=,tag:3IGtQPCVmCVhfwis/FLYJg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:yJSLuldGB5IUmgvlp0zcUXDM5SzJCylQ+MoDFFXwiXuyLlw=,iv:o9N3PQCz/DdtWii8jfZULfOv3sJgUNrN2Jg7YBsK10c=,tag:YLHDofv3fv6Ks85e4ms8tw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:vSXTT1ihwm7n1qFFzENYH7LiFQ==,iv:U0Mj+Lyc5BOjsKov9E5oiSYkEiPH1hpCh3jSQOFklUs=,tag:V1nmMlGJmxU0iqLQm5TTkA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjbU1rNGNWTEtPd2RyOTIx
-            anZHbUkweXk5VFI4T2F6NzBjMVdaQVdRYnh3CkhiUXBOd00xaUFLbVQzRkpNNTVX
-            bFR2UlI4bEV6NzY5blVxT2FSZWFueTQKLS0tIGtMZ2tMaGh1cFR3cTlFaW9uSXJv
-            VWlTc2JqQUdIZXpHU3pjNlhJZk9TUXcKQL2Pg0y4P6aGWFoKlNSpZWhcY37bHdjD
-            hmS+STWXYyUSfnDJQO2OL2lA04bNh0IojmFM1uvXr1x03kvuKjZnPw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxQUIzNW5BK3M0WEVQaWRk
+            K0QzV29nOE1qS0ZSQ1dSS1V6Tk1OMllubjNFCjR0eGV5YmRTTmxZWmFzcnJMa25x
+            Z2ZwL1JTUWN2UmduV1dtUFY3SEtkak0KLS0tIEptRXJvclVkUERLR0tOd1Iyb1Fv
+            elNHckwyTW9jc0tuTFgrUGg0T2JHdGsKghc/Jwp6YPDEIpEQt1dtTtCnG0TI8M7u
+            os23rtFEAX9j3ZfyhuEyjcurCaZ1k6SxV5fKpT+7k2CE9uMo56G/sA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-01T19:34:37Z"
-    mac: ENC[AES256_GCM,data:FQTuELRoJgGXrLbzvd5dBG/Xsd94U4wLEcB/+7MSRMK+Udp+GsCAA4R3tyXDVervZR3CHPq/DdzImyUul0jI6RYy/y+IXIvTiTHgigLqL/okTDUptejDdp4Jd5//NvVm/P/j7qBE72u5vwi8KAw53w2wR1x9ZVGOPydfAq8v2yI=,iv:dGzNA/BI8ZjTeDIY+27O7mh1armunpFkzg79vUoBE8U=,tag:n/EyskeVfhUQnHk+Ha2CWw==,type:str]
+    lastmodified: "2023-01-04T04:52:51Z"
+    mac: ENC[AES256_GCM,data:fRhw0D4R5+ANKN3uDXna8xlks890r6mrqkd6WGrFdu9X9dXhl+P2pf+0btqbgJO2TXPRBEHoCZKWi7BCL1EIgVRZwzqAIMkZZ6zTeI1CYiUc3FA0SLXHPHhRCgAJRQmrbu6i83hen1hSr3Sb5KOT2KSn+FB6u94wvSkx1RfXNTE=,iv:JRyifV3+Ns1WGnYhX0rTQVdiIxh3mnfoH+jXZ8ZZkQU=,tag:sVT94D7nXe9+NzNBODTc+w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
