--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -13,3 +13,5 @@ data:
   TRAEFIK_SERVICE_ADDR: "192.168.1.95"
   NFS_SERVER_ADDR: "192.168.1.2"
   NFS_SERVER_PATH: "/network-storage"
+  PROXMOX_ADDR: "192.168.1.7"
+  PLEX_ADDR: "192.168.1.25"
