--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -13,3 +13,5 @@ data:
   TRAEFIK_SERVICE_ADDR: "${BOOTSTRAP_TRAEFIK_INGRESS_ADDR}"
   NFS_SERVER_ADDR: "${BOOTSTRAP_NFS_SERVER_ADDR}"
   NFS_SERVER_PATH: "${BOOTSTRAP_NFS_SERVER_PATH}"
+  PROXMOX_ADDR: "${BOOTSTRAP_PROXMOX_ADDR}"
+  PLEX_ADDR: "${BOOTSTRAP_PLEX_ADDR}"
