--- a/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/middleware.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   basicAuth:
     secret: basic-auth
-    removeHeader: true
+    #removeHeader: true
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
