--- a/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
+++ b/kubernetes/apps/networking/traefik/add-ons/external-services/plex.yaml
@@ -17,6 +17,7 @@ spec:
           port: 32400
           namespace: networking
           serversTransport: plex
+          passHostHeader: true
       # middlewares:
       #   - name: traefik-middleware-chains-default
       #     namespace: networking
