traefik updates for forward auth

--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -22,8 +22,9 @@ spec:
   #     namespace: networking
   values:
     selector:
-    matchLabels:
-      app: traefik-forward-auth
+      app: traefik
+    # matchLabels:
+    #   app: traefik-forward-auth
     controller:
       replicas: 1
       strategy: RollingUpdate
