traefik updates for forward auth

--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -38,6 +38,7 @@ spec:
       pullPolicy: IfNotPresent
     middleware:
       enabled: false
+      nameOverride: traefik-forward-auth
     # service:
     #   main:
     #     ports:
