traefik updates for forward auth

--- a/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
@@ -3,6 +3,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-forward-auth
+  namespace: networking
   labels:
     app: traefik
 spec:
@@ -14,8 +15,8 @@ spec:
       services:
         - name: traefik-forward-auth
           port: 4181
-      # middlewares:
-      #   - name: traefik-forward-auth
-      #     namespace: networking
+      middlewares:
+        - name: traefik-forward-auth
+          namespace: networking
   tls:
     secretName: "auth-${SECRET_DOMAIN/./-}-tls"
