--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: traefik-forward-auth
   labels:
     app: traefik-forward-auth
-  #namespace: networking
+    #namespace: networking
 spec:
   interval: 5m
   chart:
@@ -32,8 +32,8 @@ spec:
         unavailable: 1
         surge: 1
     image:
-      #repository: ghcr.io/kitos9112/traefik-forward-auth
-      repository: thomseddon/traefik-forward-auth:latest
+      repository: ghcr.io/kitos9112/traefik-forward-auth
+      #repository: thomseddon/traefik-forward-auth:latest
       tag: latest
       pullPolicy: IfNotPresent
     middleware:
