traefik updates for forward auth

--- a/kubernetes/apps/networking/traefik-forward-auth/app/service.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/service.yaml
@@ -13,6 +13,6 @@ spec:
   selector:
     app: traefik
   ports:
-    - name: auth-http
+    - name: traefik-forward-auth
       port: 4181
       targetPort: 4181
