traefik updates for forward auth

--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -39,11 +39,11 @@ spec:
     middleware:
       enabled: false
       nameOverride: traefik-forward-auth
-    # service:
-    #   main:
-    #     ports:
-    #       http:
-    #         port: 4181
+    service:
+      main:
+        ports:
+          http:
+            port: 4181
     # middleware:
     #   enabled: true
     #   nameOverride: traefik-forward-auth
