--- a/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
@@ -3,6 +3,8 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-forward-auth
+  annotations:
+  kubernetes.io/ingress.class: traefik-external
   namespace: networking
   labels:
     app: traefik
