--- a/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
@@ -4,7 +4,7 @@ kind: IngressRoute
 metadata:
   name: traefik-forward-auth
   annotations:
-  kubernetes.io/ingress.class: traefik-external
+    kubernetes.io/ingress.class: traefik
   namespace: networking
   labels:
     app: traefik
