--- a/kubernetes/apps/networking/traefik-forward-auth/app/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/kustomization.yaml
@@ -5,5 +5,6 @@ namespace: networking
 resources:
   - ./helmrelease.yaml
   - ./cert.yaml
-  - ./ingress-route.yaml
- # - ./service.yaml
+  #- ./ingress-route.yaml
+  - ./ingress.yaml
+  # - ./service.yaml
