traefik updates for forward auth

--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -42,6 +42,8 @@ spec:
         ingressClassName: traefik
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
+          external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+          external-dns.home.arpa/enabled: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           #traefik.ingress.kubernetes.io/router.tls: "true"
           traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-forward-auth@kubernetescrd
