traefik updates for forward auth

--- a/kubernetes/apps/default/hajimari/app/ingress.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress.yaml
@@ -25,4 +25,4 @@ spec:
   tls:
     - hosts:
         - *host
-      secretName: "hajimari-${SECRET_DOMAIN/./-}-tls"
+      secretName: "hajimari-tls"
