--- a/kubernetes/apps/default/hajimari/app/ingress.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: webhook-receiver
+  name: hajimari
   namespace: flux-system
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
