--- a/kubernetes/apps/default/hajimari/app/ingress.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: hajimari
-  namespace: default
+  namespace: flux-system
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
