--- a/kubernetes/apps/default/hajimari/app/ingress.yaml
+++ b/kubernetes/apps/default/hajimari/app/ingress.yaml
@@ -9,6 +9,8 @@ metadata:
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
     external-dns.home.arpa/enabled: "true"
     hajimari.io/enable: "false"
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-forward-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
@@ -22,6 +24,7 @@ spec:
                 name: hajimari
                 port:
                   number: 3000
+
   tls:
     - hosts:
         - *host
