--- a/kubernetes/apps/default/kube-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kube-dashboard/app/helmrelease.yaml
@@ -29,18 +29,36 @@ spec:
       - --disable-settings-authorizer
       - --enable-insecure-login
       - --token-ttl=43200
+    # ingress:
+    #   enabled: true
+    #   className: traefik
+    #   annotations:
+    #     cert-manager.io/cluster-issuer: letsencrypt-production
+    #     hajimari.io/icon: mdi:kubernetes
+    #   hosts:
+    #     - &host "kube.${SECRET_DOMAIN}"
+    #   tls:
+    #     - hosts:
+    #         - *host
+    #       secretName: kubernetes-dashboard-tls
     ingress:
-      enabled: true
-      className: traefik
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-production
-        hajimari.io/icon: mdi:kubernetes
-      hosts:
-        - &host "kube.${SECRET_DOMAIN}"
-      tls:
-        - hosts:
-            - *host
-          secretName: kubernetes-dashboard-tls
+      main:
+        enabled: true
+        ingressClassName: traefik
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          external-dns.alpha.kubernetes.io/target: "kube.${SECRET_DOMAIN}"
+          external-dns.home.arpa/enabled: "true"
+          hajimari.io/icon: video-input-antenna
+        hosts:
+          - host: &host "kube.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - *host
+            secretName: kubernetes-dashboard-tls
     metricsScraper:
       enabled: true
     serviceMonitor:
