--- a/kubernetes/apps/default/kube-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kube-dashboard/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: kubernetes-dashboard
+  name: kube-dashboard
   namespace: default
 spec:
   interval: 15m
@@ -41,27 +41,27 @@ spec:
     #     - hosts:
     #         - *host
     #       secretName: kubernetes-dashboard-tls
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: traefik
-        annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          external-dns.alpha.kubernetes.io/target: "kube.${SECRET_DOMAIN}"
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.tls: "true"
-          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
-          external-dns.home.arpa/enabled: "true"
-          hajimari.io/icon: video-input-antenna
-        hosts:
-          - host: &host "kube.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-        tls:
-          - hosts:
-              - *host
-            secretName: kubernetes-dashboard-tls
+    # ingress:
+    #   main:
+    #     enabled: true
+    #     ingressClassName: traefik
+    #     annotations:
+    #       cert-manager.io/cluster-issuer: letsencrypt-production
+    #       external-dns.alpha.kubernetes.io/target: "kube.${SECRET_DOMAIN}"
+    #       traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #       traefik.ingress.kubernetes.io/router.tls: "true"
+    #       traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-default@kubernetescrd
+    #       external-dns.home.arpa/enabled: "true"
+    #       hajimari.io/icon: video-input-antenna
+    #     hosts:
+    #       - host: &host "kube.${SECRET_DOMAIN}"
+    #         paths:
+    #           - path: /
+    #             pathType: Prefix
+    #     tls:
+    #       - hosts:
+    #           - *host
+    #         secretName: kubernetes-dashboard-tls
     metricsScraper:
       enabled: true
     serviceMonitor:
