--- a/kubernetes/apps/default/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: kube-dashboard
+  name: kubernetes-dashboard
   namespace: default
 spec:
   interval: 15m
