--- a/kubernetes/apps/default/kubernetes-dashboard/app/ingress-route.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/ingress-route.yaml
@@ -2,7 +2,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: kube-dashboard
+  name: kubernetes-dashboard
 spec:
   entryPoints:
     - websecure
@@ -10,10 +10,10 @@ spec:
     - match: Host(`kube.${SECRET_DOMAIN}`)
       kind: Rule
       services:
-        - name: kube-dashboard
+        - name: kubernetes-dashboard
           port: 8443
       middlewares:
         - name: traefik-middleware-chains-default
           namespace: networking
   tls:
-    secretName: kube-dashboard
+    secretName: kubernetes-dashboard
