--- a/kubernetes/apps/default/kubernetes-dashboard/app/rbac.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/rbac.yaml
@@ -4,12 +4,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: kube-dashboard
+  name: kubernetes-dashboard
   namespace: default
   labels:
     app.kubernetes.io/managed-by: Helm
   annotations:
-    meta.helm.sh/release-name: kube-dashboard
+    meta.helm.sh/release-name: kubernetes-dashboard
     meta.helm.sh/release-namespace: default
 secrets:
   - name: kubernetes-dashboard
@@ -18,14 +18,14 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
-  name: kube-dashboard
+  name: kubernetes-dashboard
   namespace: default
   labels:
     app.kubernetes.io/managed-by: Helm
   annotations:
-    meta.helm.sh/release-name: kube-dashboard
+    meta.helm.sh/release-name: kubernetes-dashboard
     meta.helm.sh/release-namespace: default
-    kubernetes.io/service-account.name: kube-dashboard
+    kubernetes.io/service-account.name: kubernetes-dashboard
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -37,5 +37,5 @@ roleRef:
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: kube-dashboard
+    name: kubernetes-dashboard
     namespace: default
