--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ./hajimari/ks.yaml
   - ./weave-gitops/ks.yaml
   - ./whoami/ks.yaml
-  - ./kube-dashboard/ks.yaml
+  - ./kubernetes-dashboard/ks.yaml
