--- a/kubernetes/apps/default/kubernetes-dashboard/app/ingress-route.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/ingress-route.yaml
@@ -5,15 +5,15 @@ metadata:
   name: kubernetes-dashboard
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - match: Host(`kube.${SECRET_DOMAIN}`)
       kind: Rule
       services:
         - name: kubernetes-dashboard
           port: 8443
-      middlewares:
-        - name: traefik-middleware-chains-default
-          namespace: networking
+      # middlewares:
+      #   - name: traefik-middleware-chains-default
+      #     namespace: networking
   tls:
     secretName: kubernetes-dashboard
